# simul_diagnostic

./: .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml
docs/: conf.py  index.rst  install.rst  requirements.txt  usage.ipynb  workflows.rst
docs/mermaid/: a_priori.mmd  high_level.mmd  matsim_workflow.mmd
examples/: mvp.ipynb
examples/test_data/: 1000_events.txt  test.csv
src/diagnostic/: analyses.py  analysis.py  latex_string.py  matsim_parser.awk  report.py  simulparser.py
src/map_matching/: classes.py  cli.py  links_to_keep.py  match_detector.py  match_detector_matsim.py  match_detector_osm.py  prep_network.py
src/parser/: simulparser.py
src/utils/: __init__.py  process_matsim_events.sh
tests/: test_analyses.py  test_match_detector_osm.py
