[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simul_diagnostic"
version = "0.0.1"
authors = [
  { name="EduFalbel" },
]
description = "Diagnostic tool for calibration of transport simulations"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "matplotlib",
  "pandas",
  "click",
  "numpy",
  "geopandas",
  "pylatex",
  "shapely",
]

[project.optional-dependencies]
matsim = [
  "matsim",
  "protobuf==3.20.*",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["diagnostic", "map_matching", "utils"]
exclude = ["parser"]
namespaces = false